outputs/tsp_constructive-constructive/2025-09-19_23-18-06/evaluations/problem_eval-1139364500969912316_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later, using a dynamic weighting system that shifts priorities based on remaining nodes, creating a balance between exploration and exploitation.}
                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later, using a dynamic weighting system that shifts priorities based on remaining nodes, creating a balance between exploration and exploitation.}
                                                                                                                                                                ^
SyntaxError: unmatched '}'
